--- a/app/html-old/header-nav(old.headerNavSystem).html
+++ b/app/html-old/header-nav(old.headerNavSystem).html
@@ -87,7 +87,7 @@
 						</ul>
 					</div>
 						
-					<button id="header-navSettingControl" class="button header-button header-nav-button" type="button" data-toggle="collapse" data-target="#header-navSetting" aria-expanded="false" aria-controls="header-navSetting">Настройка</button>
+					<button id="header-navSettingControl" class="button header-button header-nav-button" type="button" data-toggle="collapse" data-target="#header-nav-setting" aria-expanded="false" aria-controls="header-navSetting">Настройка</button>
 				</div>
 			</div>
 			<!-- /.col-xl-2 -->
@@ -375,8 +375,8 @@
 
 						</div>
 						<div class="form-checkbox-button-wrap">
-							<button type="reset" class="button form-setting-button" data-toggle="collapse" data-target="#header-navSetting">Отмена</button>
-							<button type="submit" class="button form-setting-button" data-toggle="collapse" data-target="#header-navSetting">Применить</button>
+							<button type="reset" class="button form-setting-button" data-toggle="collapse" data-target="#header-nav-setting">Отмена</button>
+							<button type="submit" class="button form-setting-button" data-toggle="collapse" data-target="#header-nav-setting">Применить</button>
 						</div>
 					</form>
 				</div>
