--- a/app/stylegide.html
+++ b/app/stylegide.html
@@ -1046,7 +1046,7 @@
               <input class="form__input" id="formSubject" type="text" placeholder="Введите тему обращения"/>
             </div>
             <div class="form__box text-right"></div>
-            <div class="form__group" id="formMoreInputs">
+            <div class="form__group" id="form-more-inputs">
               <div class="form__box">
                 <label class="form-label" for="formFulName"><span>Ф.И.О.</span></label>
                 <input class="form__input" id="formFulName" type="text" placeholder="Ваши Ф.И.О."/>
@@ -1496,7 +1496,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <button class="button button-up" id="btnUp"><i class="icon-arrow-down"></i></button>
+              <button class="button button-up" id="btn-up"><i class="icon-arrow-down"></i></button>
             </div>
           </div>
         </div>
