--- a/app/html-old/calendar.html
+++ b/app/html-old/calendar.html
@@ -325,7 +325,7 @@
 								</ul>
 							</div>
 								
-							<button id="header-navSettingControl" class="button header-button header-nav-system-button" type="button" data-toggle="collapse" data-target="#header-navSetting" aria-expanded="false" aria-controls="header-navSetting">Настройка</button>
+							<button id="header-navSettingControl" class="button header-button header-nav-system-button" type="button" data-toggle="collapse" data-target="#header-nav-setting" aria-expanded="false" aria-controls="header-navSetting">Настройка</button>
 						</div>
 					</div>
 					<!-- /.col-xl-2 -->
@@ -616,8 +616,8 @@
 
 								</div>
 								<div class="form-checkbox-button-wrap">
-									<button type="reset" class="button form-setting-button" data-toggle="collapse" data-target="#header-navSetting">Отмена</button>
-									<button type="submit" class="button form-setting-button" data-toggle="collapse" data-target="#header-navSetting">Применить</button>
+									<button type="reset" class="button form-setting-button" data-toggle="collapse" data-target="#header-nav-setting">Отмена</button>
+									<button type="submit" class="button form-setting-button" data-toggle="collapse" data-target="#header-nav-setting">Применить</button>
 								</div>
 							</form>
 						</div>
@@ -694,7 +694,7 @@
 										</ul>
 									</div>
 
-									<button id="menuLeftListControl" class="menu-left-control active" type="button" data-toggle="collapse" data-target="#menuLeftList" aria-expanded="false" aria-controls="menuLeftList"></button>
+									<button id="menuLeftListControl" class="menu-left-control active" type="button" data-toggle="collapse" data-target="#menu-left-list" aria-expanded="false" aria-controls="menuLeftList"></button>
 								</div>
 
 								<div id="menuLeftItemCurrent" class="menu-left__item menu-left__item-current"></div>
