--- a/app/structure.html
+++ b/app/structure.html
@@ -2587,7 +2587,7 @@
     <script src="js/libs/validate/jquery.validate.min.js"></script>
     <script src="js/libs/jquery.maskedinput.min.js"></script>
     <script src="js/libs/bootstrap-modal-ios.js"></script>
-    <!--script(src='js/libs/detect-browser/detect-browser.js')-->
+    <script src="js/libs/getbrowser/getBrowser.js"></script>
     <!-- main script-->
     <script src="js/main/main.js?0.3.9"></script><!--[if lte IE 9]><link href="ie9/css/bootstrap-ie9.css" rel="stylesheet" /><![endif]--><!--[if lte IE 9]><link rel="stylesheet" href="ie9/css/style-ie9.css" /><![endif]--><!--[if lte IE 9]><script src="ie9/js/bootstrap-ie9.js"></script><![endif]--><!--[if lte IE 9]><script src="ie9/js/main-ie9.js"></script><![endif]-->
     <script src="ie9/js/main-ie.js?0.3.9"></script>
