--- a/app/wisywig.html
+++ b/app/wisywig.html
@@ -1045,20 +1045,18 @@
                         <h4>Текст</h4>
                       </div>
                     </div>
-                    <div class="content-title">
-                      <div class="content-titlebox">
-                        <h2>Более 10,6 млн тонн рулонного проката произвел литейно-прокатный комплекс ВМЗ за 10 лет работы</h2>
-                      </div>
-                    </div>
                   </div>
                   <div class="wisywig-content">
                     <h1>Заголовок 1 уровня</h1>
                     <h2>Заголовок 2 уровня</h2>
                     <h3>Заголовок 3 уровня</h3>
                     <h4>Заголовок 4 уровня</h4>
+                    <h5>Заголовок 5 уровня</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum modi repellendus ullam? Aliquam expedita fuga hic, ipsum molestiae quia veniam.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum modi repellendus ullam? Aliquam expedita fuga hic, ipsum molestiae quia veniam.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum modi repellendus ullam? Aliquam expedita fuga hic, ipsum molestiae quia veniam.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum modi repellendus ullam? Aliquam expedita fuga hic, ipsum molestiae quia veniam. &nbsp;<a href="#">Lorem ipsum</a><b>&nbsp;Bold,&nbsp;</b><i>Italic,&nbsp;</i>
+                      <u>Underline</u>
+                    </p>
                     <ul>
                       <li>Пункт списка</li>
                       <li>Пункт списка</li>
